--- a/views/game.hbs
+++ b/views/game.hbs
@@ -10,4 +10,12 @@
   </div>
 </div>
 <div>Your color - <span id='color'></span></div>
+<div>Score:
+  <ul>
+    <li><span>Red: </span><span id='score_0'>1</span></li>
+    <li><span>Green: </span><span id='score_1'>1</span></li>
+    <li><span>Yellow: </span><span id='score_2'>1</span></li>
+    <li><span>Pop: </span><span id='score_3'>1</span></li>
+  </ul>
+</div>
 <script defer src='/js/game.js'></script>
