--- a/views/game.hbs
+++ b/views/game.hbs
@@ -4,7 +4,7 @@
   <div id='chat'>
     <div id='chatArea'></div>
     <form id='inputArea'>
-      <input type='text' placeholder='type here' />
+      <input type='text' name='text' placeholder='type here' />
       <button type='submit'>Send</button>
     </form>
   </div>
