--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,12 @@
 <div class='wrapper'>
-  <h2>Room (<span id='roomName'>none</span>):</h2>
-  <div id='usersList'></div>
-  <h3>All: <span id='allUsers'>0</span></h3>
+  <div class='intro'>
+    <h2>FILTY RACE</h2>
+    <p>Вам предстоит победить в гонке между 4мя игроками.</p>
+    <p>Дано поле 12x12, каждому игроку привязывается один из 4х цветов.</p>
+    <p>Вы можете передвигаться по пустым или своим ячейкам.</p>
+    <p>Переходить на ячейки чужого цвета нельзя.</p>
+    <p>Победителем становится тот, кто заполнил 36 ячеек.</p>
+    <p>Передвигаться можно с помощью стрелочек на клавиатуре.</p>
+    <a href='/game'>Присоединиться</a>
+  </div>
 </div>
