--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='/css/styles.css' />
     <script src='/socket.io/socket.io.js'></script>
     <script src='/js/script.js' defer></script>
-    <title>TEST</title>
+    <title>FILTY RACE</title>
   </head>
   <body>
     <div class='bg-wrapper'>
