--- a/views/game.hbs
+++ b/views/game.hbs
@@ -4,13 +4,14 @@
   <div id='chat'>
     <div id='chatArea'></div>
     <form id='inputArea'>
-      <input type='text' name='text' placeholder='type here' />
-      <button type='submit'>Send</button>
+      <input type='text' name='text' placeholder='Написать в чат' />
+      <button type='submit'>📦</button>
     </form>
   </div>
 </div>
-<div>Your color - <span id='color'></span></div>
-<div>Score:
+<div class='color-wr'>Ваш цвет - <span id='color'></span></div>
+<div id='score'>
+  <p>Счет</p>
   <ul>
     <li><span>Red: </span><span id='score_0'>1</span></li>
     <li><span>Green: </span><span id='score_1'>1</span></li>
