--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     <p>Дано поле 12x12, каждому игроку привязывается один из 4х цветов.</p>
     <p>Вы можете передвигаться по пустым или своим ячейкам.</p>
     <p>Переходить на ячейки чужого цвета нельзя.</p>
-    <p>Победителем становится тот, кто заполнил 36 ячеек.</p>
+    <p>Победителем становится тот, кто заполнил 41 ячейку.</p>
     <p>Передвигаться можно с помощью стрелочек на клавиатуре.</p>
     <a href='/game'>Присоединиться</a>
   </div>
