--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,4 +9,14 @@
     <p>Передвигаться можно с помощью стрелочек на клавиатуре.</p>
     <a href='/game'>Присоединиться</a>
   </div>
+  <div class='ps'>
+    <p>
+      5 августа 2011 года на ютубе вышло довольно странное видео «Filthy Shit»,
+      в котором молодой человек в очках и с искажённым голосом рассказывал о
+      приступе неконтролируемой диареи. Видео, выложенное на спор для друга, со
+      временем породило целый культурный феномен в виде Шоу Филти Фрэнка —
+      самого безумного, хаотичного и непредсказуемого шоу в истории современного
+      интернета.
+    </p>
+  </div>
 </div>
