--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='/css/styles.css' />
     <script src='/socket.io/socket.io.js'></script>
     <script src='/js/script.js' defer></script>
+    <link rel='shortcut icon' href='/images/image_0.png' type='image/png' />
     <title>FILTY RACE</title>
   </head>
   <body>
